Allow Deployer to used specific started instant
Closes gh-31