@@ -114,7 +114,26 @@ public class Deployer {
 	 */
 	public void deploy(String repository, String buildNumber, String buildName, URI buildUri, String project,
 			String revision, Path folder, List<ArtifactProperties> artifactProperties, Signing signing) {
-		Instant started = Instant.now();
+		deploy(repository, buildNumber, buildName, buildUri, project, revision, Instant.now(), folder,
+				artifactProperties, signing);
+	}
+
+	/**
+	 * Deploys artifacts from the given folder to Artifactory.
+	 * @param repository the target repository
+	 * @param buildNumber the build number
+	 * @param buildName the build name
+	 * @param buildUri uri of the build on the CI server, or {@code null}
+	 * @param project the Artifactory project key, or {@code null}
+	 * @param revision the VCS revision, or {@code null}
+	 * @param started the timestamp of the build or {@code null}
+	 * @param folder the folder containing artifacts to deploy
+	 * @param artifactProperties per-path artifact property rules, or {@code null}
+	 * @param signing signing configuration, or {@code null}
+	 */
+	public void deploy(String repository, String buildNumber, String buildName, URI buildUri, String project,
+			String revision, Instant started, Path folder, List<ArtifactProperties> artifactProperties,
+			Signing signing) {
 		Map<String, String> buildProperties = getBuildProperties(buildNumber, buildName, started);
 		MultiValueMap<Category, DeployableArtifact> batchedArtifacts = getBatchedArtifacts(buildProperties, folder,
 				artifactProperties);
@@ -183,8 +202,13 @@ public class Deployer {
 	}
 
 	private Map<String, String> getBuildProperties(String buildNumber, String buildName, Instant started) {
-		return Map.of("build.name", buildName, "build.number", buildNumber, "build.timestamp",
-				Long.toString(started.toEpochMilli()));
+		Map<String, String> buildProperties = new LinkedHashMap<>();
+		buildProperties.put("build.name", buildName);
+		buildProperties.put("build.number", buildNumber);
+		if (started != null) {
+			buildProperties.put("build.timestamp", Long.toString(started.toEpochMilli()));
+		}
+		return Collections.unmodifiableMap(buildProperties);
 	}
 
 	private MultiValueMap<Category, DeployableArtifact> signArtifactsIfNecessary(
